resp board fixed Done-Tasks not visible

--- a/styles/respBoard.css
+++ b/styles/respBoard.css
@@ -70,6 +70,8 @@
         max-height: none !important;
         padding-left: 0 !important;
         overflow-y: hidden !important;
+        padding-left: 16px;
+        min-height: fit-content;
     }
 
     .taskContainer {
@@ -110,12 +112,6 @@
     .taskContainer {
         padding-left: 16px;
         padding-right: 16px;
-    }
-
-    .scrollabeTaskContainerWrapper {
-        padding-left: 16px;
-        max-height: none !important;
-        min-height: 130svh;
     }
 
     .tasksColumn {
